<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <group android:title="@string/system">

        <item
            android:id="@+id/receive_setting"
            android:icon="@drawable/ic_message"
            android:title="@string/receive_setting" />

        <item
            android:id="@+id/net_setting"
            android:icon="@drawable/ic_globe"
            android:title="@string/net_setting" />
        <item
            android:id="@+id/feedBack"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feedBack" />
        <item
            android:id="@+id/version_up"
            android:icon="@drawable/ic_version_up"
            android:title="@string/version_up" />

        <item
            android:id="@+id/compatibility_mode"
            android:icon="@drawable/ic_compatible"
            android:title="@string/compatibility_mode" />

        <item
            android:id="@+id/recovery"
            android:icon="@drawable/ic_recovery"
            android:title="@string/recovery" />
    </group>

    <item
        android:title="@string/other"
        tools:ignore="HardcodedText">
        <menu>
            <item
                android:id="@+id/pwd_setting"
                android:icon="@drawable/ic_pwd"
                android:title="@string/pwd_setting" />

            <item
                android:id="@+id/switch_user"
                android:icon="@drawable/ic_switch_user"
                android:title="@string/switch_user" />
            <item
                android:id="@+id/about"
                android:icon="@drawable/icon_about"
                android:title="@string/about" />
            <item
                android:id="@+id/exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/exit" />

        </menu>

    </item>

</menu>