<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:background="@color/xxblue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/xxblue">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:layout_marginTop="18dp"
                    android:src="@drawable/title" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/bg_admin"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/touxiang_bg"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/touxiang" />

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_5dp"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        android:text="admin"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_10dp"
                android:background="@color/main" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#E5E5E5"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_alert"
                    style="@style/main_item_style"
                    android:paddingLeft="@dimen/dimen_10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/alert_new" />

                    <TextView
                        style="@style/main_item_text_style"
                        android:text="@string/baojin" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_yinhuan"
                    style="@style/main_item_style">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/yinhuan" />

                    <TextView
                        style="@style/main_item_text_style"
                        android:text="@string/yinhuan" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_cewen"
                    style="@style/main_item_style"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/tongzhi" />

                    <TextView
                        style="@style/main_item_text_style"
                        android:text="@string/cewen" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_jiance"
                    style="@style/main_item_style">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/jiance" />

                    <TextView
                        style="@style/main_item_text_style"
                        android:text="@string/jiance" />
                </LinearLayout>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#C9C9C9"
                android:paddingLeft="@dimen/dimen_10dp"
                android:paddingRight="@dimen/dimen_10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#E5E5E5"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_gongdan"
                    style="@style/main_item_style"
                    android:paddingLeft="@dimen/dimen_10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/gongdan" />

                    <TextView
                        style="@style/main_item_text_style"
                        android:text="@string/order" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_buzhuo"
                    style="@style/main_item_style">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/buzhuo" />

                    <TextView
                        style="@style/main_item_text_style"
                        android:text="@string/catchstr" />
                </LinearLayout>

                <ViewStub
                    style="@style/main_item_style"
                    android:paddingRight="@dimen/dimen_10dp"
                    />

                <!--<LinearLayout-->
                    <!--android:id="@+id/ll_baobiao"-->
                    <!--style="@style/main_item_style"-->
                    <!--android:visibility="gone"-->
                    <!--&gt;-->

                    <!--<ImageView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:src="@drawable/baobiao" />-->

                    <!--<TextView-->
                        <!--style="@style/main_item_text_style"-->
                        <!--android:text="@string/report" />-->
                <!--</LinearLayout>-->

                <LinearLayout
                    android:id="@+id/ll_shaoma"
                    style="@style/main_item_style">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/shaoma" />

                    <TextView
                        style="@style/main_item_text_style"
                        android:text="@string/scan" />
                </LinearLayout>

                <ViewStub
                    style="@style/main_item_style"
                    android:paddingRight="@dimen/dimen_10dp"
                    />
                <!--<LinearLayout-->
                    <!--android:id="@+id/ll_tongzhi"-->
                    <!--style="@style/main_item_style"-->
                    <!--android:paddingRight="@dimen/dimen_10dp"-->
                    <!--android:visibility="gone">-->

                    <!--<ImageView-->
                        <!--android:id="@+id/iv_tongzhi"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:src="@drawable/tongzhi" />-->

                    <!--<TextView-->
                        <!--style="@style/main_item_text_style"-->
                        <!--android:text="@string/notice" />-->
                <!--</LinearLayout>-->
            </LinearLayout>

                <ImageView
                    android:id="@+id/iv_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:src="@drawable/set_new" />
        </LinearLayout>

    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/drawer" />

</android.support.v4.widget.DrawerLayout>