<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_camera"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <View
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="#333333" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimen_10dp"
        android:background="@drawable/bg_password_setting"
        android:translationZ="1dp">

        <LinearLayout
            android:id="@+id/ll_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/image_login_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#cccccc"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:paddingTop="@dimen/dimen_10dp">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:src="@drawable/ic_logo" />

                <TextView
                    android:id="@+id/tv_yado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:text="一多运维"
                    android:textColor="#6596FD"
                    android:textSize="40sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@id/ll_img"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:text="用户名：" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/bg_rounded_container"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dimen_10dp"
                        android:src="@drawable/ic_user" />

                    <com.yado.pryado.pryadonew.ui.widgit.MyClearEditText
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_5dp"
                        android:layout_marginRight="@dimen/dimen_5dp"
                        android:background="@null"
                        android:hint="输入用户名"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:translationZ="2dp"
                        app:leftIcon="@drawable/ic_user" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:text="密码：" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/bg_rounded_container"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dimen_10dp"
                        android:src="@drawable/ic_pwd" />

                    <com.yado.pryado.pryadonew.ui.widgit.MyClearEditText
                        android:id="@+id/user_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_5dp"
                        android:layout_marginRight="@dimen/dimen_5dp"
                        android:background="@null"
                        android:hint="请输入密码"
                        android:inputType="textPassword"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:translationZ="2dp"
                        app:leftIcon="@drawable/ic_pwd" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_20dp">

                <com.yado.pryado.pryadonew.ui.widgit.SmoothCheckBox
                    android:id="@+id/smoothCheckBox"
                    android:layout_width="@dimen/dimen_20dp"
                    android:layout_height="@dimen/dimen_20dp"
                    app:color_checked="#149A45"
                    app:color_unchecked_stroke="#968d8d"
                    app:stroke_width="1dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5dp"
                    android:text="@string/remember_user" />

                <TextView
                    android:id="@+id/tv_change_ip"
                    android:visibility="gone"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_marginRight="15dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textColor="@color/blue"
                    android:text="@string/change_ip"
                    />


            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimen_20dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_20sp"
            android:translationZ="2dp"
            app:corners_radius="8dp"
            app:pressed_color="@color/orange"
            app:stroke_width="2dp"
            app:unpressed_color="@color/blue"
            tools:ignore="MissingPrefix" />

    </RelativeLayout>

</LinearLayout>